<resources>
    <string name="app_name">weibo</string>


    <!--App文字-->
    <string name="app_home">首页</string>
    <string name="app_find">发现</string>
    <string name="app_mine">我的</string>
    <string name="app_name_ch">微博</string>
    <string name="app_photo">相册</string>
    <string name="app_follow">关注</string>
    <string name="app_comments">评论</string>
    <string name="app_at">\@我</string>
    <string name="app_collect">收藏</string>
    <string name="app_comment">评论</string>
    <string name="app_translate">转发</string>
    <string name="app_laud">赞</string>
    <string name="app_fans">粉丝</string>

    <!-- TODO: 提示-->
    <string name="tips_search">搜索</string>
    <string name="tips_loading">正在加载中</string>
    <string name="tips_load_failed">加载失败</string>
    <string name="tips_no_network">无网络</string>
    <string name="tips_wifi_network">当前在WIFI环境下</string>
    <string name="tips_datatraffic_network">当前正在使用数据流量</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>




    <string name="sina_sdk_error_code">错误code:</string>
    <string name="sina_sdk_error_author">受权异常</string>


</resources>
