<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.feige.weibo.base.MainActivity"
    android:orientation="vertical"
    >



    <android.support.v4.view.ViewPager
        android:id="@+id/main_viewpage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >


    </android.support.v4.view.ViewPager>

    <android.support.design.widget.TabLayout
        android:id="@+id/main_tablayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:tabSelectedTextColor="@color/colorAccent">

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_home"
            android:icon="@drawable/ic_home_black_24dp" />

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_find"
            android:icon="@drawable/ic_explore_black_24dp" />

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_mine"
            android:icon="@drawable/ic_account_circle_black_24dp"
            />
    </android.support.design.widget.TabLayout>


</LinearLayout>
