<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.feige.weibo.mine.MineFragment"
    android:orientation="vertical"
    >

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/layout_toolbar"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="199dp"
        >

        <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/image_user"
            android:layout_centerHorizontal="true"
            android:id="@+id/text_words"
            android:layout_marginBottom="25dp"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@android:drawable/ic_menu_gallery"
            android:layout_below="@+id/text_words"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="36dp"
            android:layout_marginStart="36dp"
            android:id="@+id/imageMyPhoto"
            android:backgroundTint="@color/colorWhite"
            />

        <TextView
            android:text="@string/app_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textPhoto"
            android:layout_below="@+id/imageMyPhoto"
            android:layout_alignLeft="@+id/imageMyPhoto"
            android:layout_alignStart="@+id/imageMyPhoto"
            android:textColor="@color/colorWhite"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_below="@+id/text_words"
            android:layout_centerHorizontal="true"
            android:id="@+id/image_focus"
            android:src="@android:drawable/ic_menu_my_calendar" />

        <TextView
            android:text="@string/app_follow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_follow"
            android:layout_below="@+id/image_focus"
            android:layout_centerHorizontal="true" />

        <View
            android:layout_width="2dp"
            android:layout_height="50dp"
            android:background="@color/colorWhite"
            android:id="@+id/view4"
            android:layout_below="@+id/text_words"
            android:layout_toRightOf="@+id/image_user"
            android:layout_toEndOf="@+id/image_user"
            android:layout_marginLeft="27dp"
            android:layout_marginStart="27dp" />

        <View
            android:layout_width="2dp"
            android:layout_height="50dp"
            android:background="@color/colorWhite"
            android:layout_alignTop="@+id/imageMyPhoto"
            android:layout_toLeftOf="@+id/image_user"
            android:layout_toStartOf="@+id/image_user"
            android:layout_marginRight="34dp"
            android:layout_marginEnd="34dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/text_follow"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="25dp"
            android:layout_marginEnd="25dp"
            android:id="@+id/image_fans"
            android:src="@android:drawable/ic_menu_my_calendar"
            />

        <TextView
            android:text="@string/app_fans"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_fans"
            android:layout_below="@+id/image_fans"
            android:layout_alignRight="@+id/image_fans"
            android:layout_alignEnd="@+id/image_fans" />

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/ic_account_circle_black_24dp"
            android:layout_marginTop="20dp"
            android:id="@+id/image_user"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>

    <android.support.design.widget.TabLayout
        android:id="@+id/tablayout_in_mine"
        android:layout_width="match_parent"
        android:layout_height="30dp"

        android:layout_below="@+id/view4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="11dp">

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name_ch" />

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_comments" />

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_at" />
        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_collect" />
    </android.support.design.widget.TabLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/viewpage_in_mine"
        android:layout_width="match_parent"
        android:layout_height="271dp">

    </android.support.v4.view.ViewPager>


</LinearLayout>
